server/compilers/goLiteJS/src/test/ml2/valid/valreturn5.go
package main
//Return on a for true statement

func main() bool{
    {
        return true
    }
}
