server/compilers/goLiteJS/src/test/ml2/invalid/unary2.go
// invalid unary on bool
package main

func main() {
    _ = +true
}
